--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
  html {
     font-family: 'Hanken Grotesk', sans-serif, 'Rubik', sans-serif;
     box-sizing: border-box;
+    
 }
 li{
     list-style: none;
@@ -56,7 +57,6 @@ main{
     border-bottom-right-radius:3rem;
     color: var(--light_lavender);
 }
-
 
 .header_section .header_box{
     background-image: linear-gradient( var(--violet_blue), var(--light_royale_blue));
@@ -185,29 +185,83 @@ margin-right: .8rem;
 
 /* Footer */
 
+/*  */
 .attribution{
+    font-size: .8rem;
+    background-color: hsl(264, 100%, 60%);
     color: #fff;
-    background-image: linear-gradient(to right, var(--violet_blue), var(--light_royale_blue), var(--violet_blue));
     text-align: center;
 }
-
-
-.attribution p a{
-    color: #fff;
-    text-decoration: none;
+.attribution p{
+    margin: .5rem;
 }
-.frontend{
-    font-size: 1rem;
+.attribution a{
+    all:unset; 
+    cursor: pointer;
 }
-
-.my_name{
-    font-size: 1.5rem;
-    padding: 0 0 1rem 0;
-    margin-top: 0;
+.attribution a span{
+    background-image: linear-gradient( 90deg, hsl(263, 28%, 28%), hsl(293, 100%, 63%));
+    font-size: 1.2rem;
+    display: inline-block;
+    max-width: 50%;
+    margin: 0 auto;
+    padding: .2rem 2rem;
 }
 
 /* Mobile End */
 /* 28-12-2023 */
 
+/* Desktop Starts */
+/* 30-12-2023 */
+
+@media screen and (min-width:720px){
+    body{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+         
+    main {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-grow: 1;
+      }
+
+      .header_section{
+        padding: 2rem 0;
+        border-radius: 2rem;
+      }
+
+      .header_section .header_box{
+        padding: 3rem 2rem;
+      }
+
+      .header_bottom{
+        padding:0 4rem;
+      }
+
+      .header_bottom h3{
+        margin-bottom: 1rem;
+      }
+
+      .summary_section .summary_footer button:hover{
+        background-color: var(--cobalt_blue);
+        cursor: pointer;
+      }
+
+      .attribution p{
+        font-size: 1rem;
+        padding-top: .5rem;
+      }
+      .attribution a span{
+        font-size: 2rem;
+      }
+
+
+
+}
 
 
