--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@ li{
 
 /* Mobile Design First */
 /* Mobile Design First */
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
 
 main{
     display: flex;
